[package]
name = "gradient_ascii"
version = "0.1.0"
edition = "2024"

[dependencies]
array-init = "2.1.0"
crossterm = "0.29.0"
image = "0.25.8"
ndarray = "0.16.1"
once_cell = "1.21.3"
rayon = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
video-rs = {version = "0.10.5", features = ["ndarray"] }
