[package]
name = "gradient_ascii"
version = "0.1.0"
edition = "2024"

[dependencies]
array-init = "2.1.0"
clap = { version = "4.5.49", features = ["derive"] }
crossterm = "0.29.0"
image = "0.25.8"
infer = "0.19.0"
ndarray = "0.16.1"
once_cell = "1.21.3"
owo-colors = "4.2.3"
reqwest = "0.12.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
video-rs = {version = "0.10.5", features = ["ndarray"] }
wide = "0.8.1"
